--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -382,4 +382,50 @@ Appendgpahte 函数的定义看起来像上面的 C 代码，实现在 libvmxvmx
 
 当 guest 尝试读取 `IA32_APIC_BASE` 寄存器的值时，VMM 拦截了 RDMSR 指令而产生 `VM-exit`。DORDMSR 例程检查到 **ECX** 的值是 `IA32_APIC_BASE` 寄存器时，调用 `DoReadMsrForApicBase` 例程来处理。
 
+```x86asm
+;-----------------------------------------------------------------------
+; DoReadMsrForApicBase()
+; input:
+;       none
+; output:
+;       none
+; 描述：
+;       1) 处理 guest 读 IA32_APIC_BASE 寄存器
+;-----------------------------------------------------------------------
+DoReadMsrForApicBase:
+        push ebp
+        push ebx
+        push edx
+
+%ifdef __X64
+        LoadGsBaseToRbp
+%else
+        mov ebp, [gs: PCB.Base]
+%endif  
+        REX.Wrxb
+        mov ebx, [ebp + PCB.CurrentVmbPointer]
+        REX.Wrxb
+        mov ebx, [ebx + VMB.VsbBase]
+
+        mov esi, IA32_APIC_BASE
+        call GetMsrVte
+        REX.Wrxb
+        test eax, eax
+        jz DoReadMsrForApicBase.Done
+        
+        mov edx, [eax + MSR_VTE.Value + 4]
+        mov eax, [eax + MSR_VTE.Value]
+        mov [ebx + VSB.Rax], eax
+        mov [ebx + VSB.Rdx], edx
+        
+        DEBUG_RECORD    "[DoWriteMsrForApicBase]: read from IA32_APIC_BASE"
+        
+        call update_guest_rip
+DoReadMsrForApicBase.Done:
+        pop edx
+        pop ebx
+        pop ebp
+        ret
+```
+
 
