--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -378,13 +378,13 @@ endstruc
 
 由于 VMM 拦截guest写 `IA32_APIC_BASE` 寄存器, 但并没有为 guest 写入的 guest-physical address 地址值进行 EPT 映射. 因此, 当 guest 尝试访问 local APIC 寄存器时, 会产生 EPT violation 故障.
 
-那么, 在
+那么, 在 `DoWriteMsrForApicBase` 函数里使用 `AppendGpaHte` 函数提供了由这个 guest-physical address 产生 EPT violation 而导致 VM-exit 的处理例程.
 
 ```
 
 ```
 
-Appendgpahte 函数的定义看起来像上面的 C 代码，实现在 libvmxvmx Page.asm 文件里。在 GPA HTE (Handler Table Entry）区域建立 GPA 与 EPT violation 处理例程的对应关系。这个 GPA HTE 区域在 init vmcs buffer 函数初始化时在 kernel pool 里分配。GPA HTE 结构定义在 inclvmcs.inc 文件里。
+Appendgpahte 函数的定义看起来像上面的 C 代码，实现在 `lib\Vmx\VmxPage.asm` 文件里。在 GPA HTE (Handler Table Entry）区域建立 GPA 与 EPT violation 处理例程的对应关系。这个 GPA HTE 区域在 init vmcs buffer 函数初始化时在 kernel pool 里分配。GPA HTE 结构定义在 `inc\vmcs.inc` 文件里。
 
 ## 处理读 IA32_APIC_BASE 产生的 VM-exit
 
@@ -436,4 +436,6 @@ DoReadMsrForApicBase.Done:
         ret
 ```
 
+
+## 处理 guest 访问 local APIC
 
