--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -344,7 +344,7 @@ DoWriteMsrForApicBase.Done:
         ret
 ```
 
-`DoWritemsrforapicbase` 函数实现在 `lib\Vmx\Vmxmsr.asm` 文件里，它根据 guest 设置 **local APIC** 的**模式**（**XAPIC** 还是 **x2APIC**），以及 `secondary processor-based VM-execution control` 字段的设置进行虚拟化配置。
+`DoWriteMsrForApicBase` 函数实现在 `lib\Vmx\Vmxmsr.asm` 文件里，它根据 guest 设置 **local APIC** 的**模式**（**XAPIC** 还是 **x2APIC**），以及 `secondary processor-based VM-execution control` 字段的设置进行虚拟化配置。
 
 * 当 local APIC 为 **XAPIC** 模式时
     * 如果 “**virtualize APIC accesses**” 为 1, 则使用 VMX 提供的 **local APIC 虚拟化功能**。
@@ -355,7 +355,7 @@ DoWriteMsrForApicBase.Done:
 
 `DoWriteMsrForApicBase` 例程通过检査 guest 写入 **IA32 APIC BASE** 寄存器的**值**确定 guest 的 local APIC 处于**何种工作模式**。在检查**写入值不合法**时将**注入** `#GP` 异常给 guest 处理，例如保留位（bits 63:N、bit 9 以及 bits 7:0) 必须为 0。
 
-当利用 EPT violation 来虚拟化 local APIC 时，下面是简单的处理流程。
+当利用 **EPT violation** 来虚拟化 local APIC 时，下面是简单的处理流程。
 
 (1) 读取 EAX 与 EDX 寄存器值。两个寄存器组合的 64 位值是 guest 尝试写入 `IA32_APIC_BASE` **寄存器的值**。
 
