--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -359,13 +359,15 @@ DoWriteMsrForApicBase.Done:
 
 (1) 读取 EAX 与 EDX 寄存器值。两个寄存器组合的 64 位值是 guest 尝试写入 `IA32_APIC_BASE` **寄存器的值**。
 
-(2) **保存** guest 写入 `IA32APIC_BASE` 寄存器的**值**。这个值在 guest 读取 `IA32_APIC_BASE` 寄存器时需要反馈给 guest
+(2) **保存** guest 写入 `IA32_APIC_BASE` 寄存器的**值**。这个值在 guest 读取 `IA32_APIC_BASE` 寄存器时需要**反馈给 guest**
 
 (3) 为 guest 的写入值提供一个 `EPT violation` 处理例程。
 
 ## 保存 guest 的写入值
 
-在前面介绍的 `DoWriteMsrForApicBase` 函数里，使用 `AppendMsrVte` 函数将 guest 的**写入值**保存在了 guest 对应的 **MSR VTE** (Value Table Entry) 区域里。这个 MSR VTE 区域在 init vmcs buffer函数初始化时从 **kernel pool** 里分配。
+在前面介绍的 `DoWriteMsrForApicBase` 函数里，使用 `AppendMsrVte` 函数将 guest 的**写入值**保存在了 guest 对应的 **MSR VTE** (Value Table Entry) 区域里。
+
+这个 MSR VTE 区域在 init vmcs buffer函数初始化时从 **kernel pool** 里分配。
 
 在 `inc\vmcs.inc` 文件里定义了一个 `MSR_VTE` 结构，这个结构用来定义 MSR VTE 区域里的每个表项。
 
