--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -387,7 +387,7 @@ endstruc
 
 ## 提供 EPT violation 处理例程
 
-由于 VMM 拦截guest写 `IA32_APIC_BASE` 寄存器, 但并没有为 guest 写入的 guest-physical address 地址值进行 EPT 映射. 因此, 当 guest 尝试访问 local APIC 寄存器时, 会产生 EPT violation 故障.
+由于 VMM **拦截**guest写 `IA32_APIC_BASE` 寄存器, 但并**没有**为 guest 写入的 guest-physical address 地址值进行 **EPT 映射**. 因此, 当 **guest** 尝试**访问** local APIC **寄存器**时, 会产生 EPT violation 故障.
 
 那么, 在 `DoWriteMsrForApicBase` 函数里使用 `AppendGpaHte` 函数提供了由这个 guest-physical address 产生 EPT violation 而导致 VM-exit 的处理例程.
 
