--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/8. guest-state区域字段.md
@@ -3,4 +3,14 @@ VMCS的 guest-state 区域用来保存与 guest 运行环境相关的信息. 包
 - 寄存器类字段
 - 非寄存器类字段
 
-(1) 寄存器类字段
+(1) 寄存器类字段如表所示.
+
+![2020-08-09-00-27-53.png](./images/2020-08-09-00-27-53.png)
+
+![2020-08-09-00-29-39.png](./images/2020-08-09-00-29-39.png)
+
+(2) 非寄存器类字段
+
+![2020-08-09-00-30-32.png](./images/2020-08-09-00-30-32.png)
+
+
