--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/6. VM-entry控制类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/6. VM-entry控制类字段.md
@@ -3,40 +3,47 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
-* [3 事件注入控制字段](#3-事件注入控制字段)
-	* [3.1 VM\-entry interruption\-information字段](#31-vm-entry-interruption-information字段)
-		* [3.1.1 外部中断(类型0)](#311-外部中断类型0)
-		* [3.1.2 NMI(类型2)](#312-nmi类型2)
-		* [3.1.3 硬件异常(类型3)](#313-硬件异常类型3)
-		* [3.1.4 软件异常(类型6)](#314-软件异常类型6)
-		* [3.1.5 软件中断(类型4)](#315-软件中断类型4)
-		* [3.1.6 特权级软件中断(类型5)](#316-特权级软件中断类型5)
-		* [3.1.7 其他事件(类型7)](#317-其他事件类型7)
-	* [3.2 VM\-entry exception error code字段](#32-vm-entry-exception-error-code字段)
-	* [3.3 VM\-entry instruction length字段](#33-vm-entry-instruction-length字段)
+- [概述](#概述)
+- [VM-entry control 字段](#vm-entry-control-字段)
+- [VM-entry MSR-load count 字段](#vm-entry-msr-load-count-字段)
+- [事件注入控制字段](#事件注入控制字段)
+  - [VM-entry interruption-information字段](#vm-entry-interruption-information字段)
+    - [外部中断(类型0)](#外部中断类型0)
+    - [NMI(类型2)](#nmi类型2)
+    - [硬件异常(类型3)](#硬件异常类型3)
+    - [软件异常(类型6)](#软件异常类型6)
+    - [软件中断(类型4)](#软件中断类型4)
+    - [特权级软件中断(类型5)](#特权级软件中断类型5)
+    - [其他事件(类型7)](#其他事件类型7)
+  - [VM-entry exception error code字段](#vm-entry-exception-error-code字段)
+  - [VM\-entry instruction length字段](#vm-entry-instruction-length字段)
 
 <!-- /code_chunk_output -->
 
-# 0 概述
+# 概述
 
 **VM\-entry区域的控制字段**包括下面这些
 
-(1) VM\-entry control字段
+(1) `VM-entry control`字段
 
-(2) VM\-entry MSR\-load count字段
+(2) `VM-entry MSR-load count`字段
 
-(3) VM\-entry MSR\-load address字段
+(3) `VM-entry MSR-load address`字段
 
-(4) VM\-entry interruption\-information字段
+(4) `VM-entry interruption-information`字段
 
-(5) VM\-entry exception error code字段
+(5) `VM-entry exception error code`字段
 
-(6) VM\-entry instruction length字段
+(6) `VM-entry instruction length`字段
 
 这些字段用来**控制在VM\-entry时处理器的行为**. 在**VM\-entry时**, 处理器检查这些字段. 如果**检查不通过**, 产生**VMfailValid失败**, 在**VM\-instruction error字段(！！！**)中**保存错误号**, 接着执行**VMLAUNCH**或**VMRESUME**指令下面的指令.
 
-# 3 事件注入控制字段
+# VM-entry control 字段
+
+# VM-entry MSR-load count 字段
+
+
+# 事件注入控制字段
 
 **事件注入**是**虚拟化平台中最关键的特性**之一, 是**实现虚拟化管理的重要手段**. 允许**在VM\-entry完成后**, 执行任何**guest指令前(！！！**), 处理器**执行由VMM设置的注入事件**. 这个事件可以是一个**中断(！！！**)或**异常(！！！**), 甚至**pending MTF VM\-exit事件(！！！**), 它们被称为"**向量化事件(！！！**)", 而**含有注入事件的VM\-entry**被称为"**向量化的VM\-entry**".
 
@@ -56,7 +63,7 @@ VMM通过设置这**三个字段**来**配置向量化事件**.
 
 **VMM**可以直接复制**VM\-exit** interruption information, VM\-exit interruption error code及VM\-exit instruction length字段的值到VM\-entry interruption\-information, VM\-entry exception error code及VM\-entry instruction length字段来完成设置. VMM也可以主动设置这几个字段来注入一个向量化事件给guest执行.
 
-## 3.1 VM\-entry interruption\-information字段
+## VM-entry interruption-information字段
 
 这个字段是**32位宽**, 用来设置**注入事件的明细信息**. 包括: **中断或异常的向量号**, **事件类型**, **错误码的delivery标志位**及**有效标志位**. 结构如图3\-7.
 
@@ -72,11 +79,11 @@ bit 31是有效位, 为1时指示VM\-entry interruption information字段有效,
 
 表中列出了可以注入的7种事件类型, 对应VM\-entry interruption information字段的bits 10:8位, 类型值1保留.
 
-### 3.1.1 外部中断(类型0)
+### 外部中断(类型0)
 
 **外部中断**不能使用**0\-15号**向量, 也不应该使用**16\-31**号向量, 应使用**32\~255**号向量. 这个时间类型被期望用来注入一个中断控制器(local APIC, IO APIC或者8259A)获得的中断请求.
 
-### 3.1.2 NMI(类型2)
+### NMI(类型2)
 
 **NMI必须使用2号向量**. 当NMI成功deliver执行后, 处理器的"blocking by NMI"状态有效, 表示存在NMI阻塞状态, 直到IRET指令执行后解除这个阻塞(见3.8.6节).
 
@@ -84,39 +91,39 @@ bit 31是有效位, 为1时指示VM\-entry interruption information字段有效,
 
 当**注入一个virtual\-NMI**, 而"NMI\-window exiting"为1, 并且"blocking by NMI"为0时, 则在**VM\-entry完成后直接产生VM\-exit**.
 
-### 3.1.3 硬件异常(类型3)
+### 硬件异常(类型3)
 
 硬件异常是指**除了\#BP(INT3指令**)与\#**OF异常(INTO指令**)以外的**所有异常**, 它们属于**fault或abort类型异常**. 也包括由**BOUND指令产生的\#BR异常**及由**UD指令产生的\#UD异常**. 所有类型的\#DB异常(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**).
 
 尽管在**64位模式下BOUND指令无效**, 但**允许注入\#BR异常(！！！**).
 
-### 3.1.4 软件异常(类型6)
+### 软件异常(类型6)
 
 **软件异常**指由**NIT3与INTO指令**产生的\#BP与\#OF异常, 对应的向量号必须为3与4. 它们属于trap类型. 尽管在64位模式下INTO指令无效, 但允许注入\#OF异常.
 
-### 3.1.5 软件中断(类型4)
+### 软件中断(类型4)
 
 软件中断指由**INT指令执行的中断**. 软件中断在delivery期间需要进行权限的检查. 对于一个non\-conforming代码段, CPL≤Gate的DPL值, 并且CPL≥Code段的DPL值. 如果在delivery期间法还是能权限不符合会产生\#GP异常. 如果exception bitmap字段的bit 13位1, \#GP异常会导致VM\-exit. 因此将在VM\-exit interruption information字段中记录中断的向量号和时间类型等. 在VM\-exit interruption error code字段记录\#GP异常错误码.
 
 注入由INT3或INTO指令产生的软件异常和软件中断一样, 在delivery期间同样修安排进行权限的检查, 处理手法与软件中断一样.
 
-### 3.1.6 特权级软件中断(类型5)
+### 特权级软件中断(类型5)
 
 这类事件**只能在注入时使用**, **不可能在执行中遇到**. 也就是说: 在**执行过程中不可能产生这类中断(！！！**), **只能通过注入事件的方式(！！！**)产生. 除了**无需进行权限检查**外, 其余的处理手法与软件中断是一致的. 这也就是这类事件的**特权**由来.
 
-### 3.1.7 其他事件(类型7)
+### 其他事件(类型7)
 
 这类事件目前使用在**MTF(Monitor Trap Flag)功能**上. 当**事件类型为7**时, **向量号必须为0**. 否则在VM\-entry时会产生VMfailValid失败. 注入这个类型事件时, 将**pending一个MTF VM\-exit事件**. 当VM\-entry完成后会**产生MTF VM\-exit(参见4.15.3节**).
 
 注意: 这个MTF VM\-exit事件**不受"monitor trap flag"控制位的影响**(另见3.5.2.1节), 但必须在支持"monitor trap flag"功能时才能注入MTF VM\-exit.
 
-## 3.2 VM\-entry exception error code字段
+## VM-entry exception error code字段
 
 这个32位的字段只有在**VM\-entry interruption information字段**的**bit 31**及**bit 11为1**时才有效, 提供一个**异常错误码**在注入事件delivery期间压入栈中.
 
 只有\#**DF, \#TS, \#NP, \#SS, \#GP, \#PF及\#AC异常才会产生错误码**. 因此, 注入这几个**硬件异常**时需要**提供错误码**. 对于**其他硬件异常**或**其他类型的事件**, 这个字段会被忽略.
 
-## 3.3 VM\-entry instruction length字段
+## VM\-entry instruction length字段
 
 这个字段是32位宽. 在事件注入中, 它被期望VM\-exit由下面的向量化事件引起时使用:
 
