--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -367,7 +367,7 @@ DoWriteMsrForApicBase.Done:
 
 在前面介绍的 `DoWriteMsrForApicBase` 函数里，使用 `AppendMsrVte` 函数将 guest 的**写入值**保存在了 guest 对应的 **MSR VTE** (Value Table Entry) 区域里。
 
-这个 MSR VTE 区域在 `init_vmcs_buffer` 函数初始化时从 **kernel pool** 里分配。**这个不属于VMCS区域？？？**
+这个 MSR VTE 区域在 `initialize_vmcs_buffer` 函数初始化时从 **kernel pool** 里分配。**这个不属于VMCS区域？？？**
 
 在 `inc\vmcs.inc` 文件里定义了一个 `MSR_VTE` 结构，这个结构用来定义 MSR VTE 区域里的每个表项。
 
@@ -395,7 +395,7 @@ endstruc
 
 ```
 
-AppendGpaHte 函数的定义看起来像上面的 C 代码，实现在 `lib\Vmx\VmxPage.asm` 文件里。在 GPA HTE (Handler Table Entry）区域建立 GPA 与 EPT violation 处理例程的对应关系。这个 GPA HTE 区域在 init_vmcs_buffer 函数初始化时在 kernel pool 里分配。GPA HTE 结构定义在 `inc\vmcs.inc` 文件里。
+AppendGpaHte 函数的定义看起来像上面的 C 代码，实现在 `lib\Vmx\VmxPage.asm` 文件里。在 GPA HTE (Handler Table Entry）区域建立 GPA 与 EPT violation 处理例程的对应关系。这个 GPA HTE 区域在 initialize_vmcs_buffer 函数初始化时在 kernel pool 里分配。GPA HTE 结构定义在 `inc\vmcs.inc` 文件里。
 
 ## 处理读 IA32_APIC_BASE 产生的 VM-exit
 
