--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -1,8 +1,16 @@
 
-在 `inc\vmcs.inc` 文件中定义了 **VMB**，以及 VMCS 区域对应的 6 个 VMCS buffer 结构，分别为 GUEST STATE、HOST STATE、EXECUTION CONTROL、EXIT CONTROL ENTRY CONTROL 及 EXIT INFO 结构。
+在 `inc\vmcs.inc` 文件中定义了 **VMB**，以及 VMCS 区域对应的 6 个 VMCS buffer 结构，分别为 GUEST_STATE、HOST_STATE、EXECUTION_CONTROL、EXIT_CONTROL、ENTRY_CONTROL 及 EXIT_INFO 结构。
 
-PCB 结构的 GuestStateBuf, HostStateBuf, ExecutionConrolBuf, Exit Controlbuf Entry Controlbuf 及 Exitlnfobuf 分别对应这些 VMCS buffer 结构
+PCB 结构的 GuestStateBuf, HostStateBuf, ExecutionConrolBuf, ExitControlBuf, EntryControlBuf 及 ExitInfoBuf 分别对应这些 VMCS buffer 结构
 
 # VMB 结构
 
 下面是 VMB 结构部分成员的定义。
+
+
+
+# VSB 结构
+
+
+
+# VMCS buffer 结构
