--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/0. 概述.md
@@ -1,6 +1,6 @@
 在系统平台上，**PCB** (`Processor Control Block`）结构中内嵌了 **4 个 VMB** (`VM Manage Block`）结构，分别为 GuestA, GuestB, GuestC 以及 GuestD。**每个 VMB 结构**对应**一个 VM 实例**，用来管理和维护 VM，其中一个功能是初始化每个 VM 对应的 VMCS 区域。
 
-PCB 结构中也包含了若干个 VMX 相关的管理记录，其中 VmxonPointer 指向 VMXON 区城，CurrentVmbPointer 指向当前的 VMB 块，还有若干个对应的 VMCS butter。
+PCB 结构中也包含了若干个 VMX 相关的管理记录，其中 **VmxonPointer** 指向 **VMXON** 区城，**CurrentVmbPointer** 指向**当前的 VMB 块**，还有若干个对应的 VMCS butter。
 
 如以下代码所示（另参见 1.4.1 节）。
 
@@ -39,4 +39,4 @@ struc PCB
 endstruc
 ```
 
-
+注意: 这6个buffer对应了VMCS的6个域, 而这6个不是每个虚拟机数据结构一份, 而是每个logical processor对应一份.
