--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构/1. PCB结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构/1. PCB结构.md
@@ -2,7 +2,7 @@
 
 # PCB结构
 
-每个逻辑处理器对应一个PCB结构, 也就是每个逻辑处理器有独立的PCB结构. 用来维护管理与处理器相关的信息.
+**每个逻辑处理器**对应**一个PCB结构**, 也就是每个逻辑处理器有独立的PCB结构. 用来维护管理与处理器相关的信息.
 
 下面将介绍PCB结构内主要的数据.
 
