--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -399,7 +399,9 @@ endstruc
 
 ## 处理读 IA32_APIC_BASE 产生的 VM-exit
 
-当 guest 尝试读取 `IA32_APIC_BASE` 寄存器的值时，VMM 拦截了 RDMSR 指令而产生 `VM-exit`。DORDMSR 例程检查到 **ECX** 的值是 `IA32_APIC_BASE` 寄存器时，调用 `DoReadMsrForApicBase` 例程来处理。
+当 guest 尝试**读取** `IA32_APIC_BASE` 寄存器的值时，VMM 拦截了 RDMSR 指令而产生 `VM-exit`。
+
+DORDMSR 例程检查到 **ECX** 的值是 `IA32_APIC_BASE` 寄存器时，调用 `DoReadMsrForApicBase` 例程来处理。
 
 ```x86asm
 ;-----------------------------------------------------------------------
