--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -449,6 +449,13 @@ DoReadMsrForApicBase.Done:
         ret
 ```
 
+`DoReadMsrForApicBase` 函数实现在`lib\Vmx\VmxMsr.asm`文件里, 它的主要工作是:
+
+(1) 调用 GetMsrVte 函数从MSR VTE区域中找到对应的VTE表项.
+
+(2) 从 VTE 表项里读取 guest 尝试写入 `IA32_APIC_BASE` 寄存器里的原值, 写入 guest 对应的 VSB 区域中.
+
+(3) 
 
 ## 处理 guest 访问 local APIC
 
