--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -451,13 +451,13 @@ DoReadMsrForApicBase.Done:
 
 `DoReadMsrForApicBase` 函数实现在`lib\Vmx\VmxMsr.asm`文件里, 它的主要工作是:
 
-(1) 调用 GetMsrVte 函数从**MSR VTE区域**中找到对应的VTE表项.
+(1) 调用 GetMsrVte 函数从**MSR VTE区域**中找到**对应的VTE表项**.
 
 (2) 从 VTE 表项里读取 guest 尝试写入 `IA32_APIC_BASE` 寄存器里的原值, 写入 **guest 对应的 VSB 区域**中.
 
 GetMsrVte 函数实现在 `lib\Vmx\VmxMsr.asm` 文件里, 
 
-当没有 MSR 对应的 MSR VTE 表项时, 返回 0 值. 从 VTE 表项读取MSR值复制到 VSB(VM Store Block) 区域后, 在执行 VMRESUME 指令前, 从 VSB 区域恢复guest的context信息.
+当没有 MSR 对应的 MSR VTE 表项时, 返回 0 值. 从 VTE 表项**读取MSR值**复制到 VSB(VM Store Block) 区域后, 在执行 VMRESUME 指令前, 从 VSB 区域恢复guest的context信息.
 
 ## 处理 guest 访问 local APIC
 
