--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/0. PCB结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/0. PCB结构.md
@@ -39,6 +39,6 @@ struc PCB
 endstruc
 ```
 
-注意: 这6个buffer对应了VMCS的6个域, 而这6个不是每个虚拟机数据结构一份, 而是每个logical processor对应一份.
+注意: 这6个buffer对应了VMCS的6个域, 而这6个不是每个虚拟机数据结构一份, 而是每个logical processor对应一份, 因为是buffer, 详见`VMCS相关数据结构`
 
 关于详细的 PCB 结构见 1.4.1
