--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -16,3 +16,8 @@ PCB 结构的 GuestStateBuf, HostStateBuf, ExecutionConrolBuf, ExitControlBuf, E
 
 
 # VMCS buffer 结构
+
+VMM在初始化 VMCS 区域时, 并不直接向 VMCS 字段写入值, 而是先将值写入 VMCS buffer对应的值中, 然后在某个时刻统一将VMCS buffer数据刷新到VMCS区域.
+
+PCB结构中的6个VMCS buffer分别对应VMCS的6个区域, 下面是 EXECUTION_CONTROL 结构的定义.
+
