--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -13,7 +13,11 @@ PCB 结构的 GuestStateBuf, HostStateBuf, ExecutionConrolBuf, ExitControlBuf, E
 
 # VSB 结构
 
+VSB 结构同样定义在 `inc\vmcs.inc` 文件中, 定义如下.
 
+```
+
+```
 
 # VMCS buffer 结构
 
