--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -455,6 +455,8 @@ DoReadMsrForApicBase.Done:
 
 (2) 从 VTE 表项里读取 guest 尝试写入 `IA32_APIC_BASE` 寄存器里的**原值**, 写入 **guest 对应的 VSB 区域**中.
 
+关于 VSB 结构, 详见`3.11.1. VMCS相关数据结构.md`
+
 GetMsrVte 函数实现在 `lib\Vmx\VmxMsr.asm` 文件里, 
 
 当没有 MSR 对应的 MSR VTE 表项时, 返回 0 值. 从 VTE 表项**读取MSR值**复制到 VSB(VM Store Block) 区域后, 在执行 VMRESUME 指令前, 从 **VSB 区域**恢复guest的**context信息**.
