--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -100,9 +100,13 @@ endstruc
 
 VSB结构定义了三类存储区域, 分别为:
 
-(1) 
+(1) VmKeyBuffer, 每个VM对应的键盘缓冲区
 
-(2) 
+(2) VmVideoBuffer, 每个VM对应的 video 缓冲区
+
+(3) context区域, 包括15个通用寄存器, RIP与RFLAGS, x87 FPU/MMX state区域以及XMM state区域.
+
+
 
 # VMCS buffer 结构
 
