--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -455,6 +455,17 @@ DoReadMsrForApicBase.Done:
 
 (2) 从 VTE 表项里读取 guest 尝试写入 `IA32_APIC_BASE` 寄存器里的**原值**, 写入 **guest 对应的 VSB 区域**中.
 
+```
+        ;; 获取VMB中的VSB Base
+        mov ebx, [ebx + VMB.VsbBase]
+        ;; 获取
+        mov edx, [eax + MSR_VTE.Value + 4]
+        mov eax, [eax + MSR_VTE.Value]
+        ;; 将
+        mov [ebx + VSB.Rax], eax
+        mov [ebx + VSB.Rdx], edx
+```
+
 关于 VSB 结构, 详见`3.11.1. VMCS相关数据结构.md`
 
 GetMsrVte 函数实现在 `lib\Vmx\VmxMsr.asm` 文件里, 
