--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -458,10 +458,10 @@ DoReadMsrForApicBase.Done:
 ```
         ;; 获取VMB中的VSB Base
         mov ebx, [ebx + VMB.VsbBase]
-        ;; 获取
+        ;; 从 VTE 表项读取原值
         mov edx, [eax + MSR_VTE.Value + 4]
         mov eax, [eax + MSR_VTE.Value]
-        ;; 将
+        ;; 将原值写入guest中对应的VSB区域
         mov [ebx + VSB.Rax], eax
         mov [ebx + VSB.Rdx], edx
 ```
