--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -456,6 +456,7 @@ DoReadMsrForApicBase.Done:
 (2) 从 VTE 表项里读取 guest 尝试写入 `IA32_APIC_BASE` 寄存器里的**原值**, 写入 **guest 对应的 VSB 区域**中.
 
 ```
+        ;; VMB对应一个虚拟机实例
         ;; 获取VMB中的VSB Base
         mov ebx, [ebx + VMB.VsbBase]
         ;; 从 VTE 表项读取原值
