--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -9,6 +9,206 @@ PCB 结构的 GuestStateBuf, HostStateBuf, ExecutionConrolBuf, ExitControlBuf, E
 
 下面是 VMB 结构部分成员的定义。
 
+```
+;;
+;; ####### VMB(VM Manage Block）结构 #######
+;;
+
+struc VMB
+        .PhysicalBase           RESQ    1               ; VMCS region 物理地址
+        .Base                   RESQ    1               ; VMCS region 虚拟地址
+        .VsbBase                RESQ    1               ; VSB 基址
+        .VsbPhysicalBase        RESQ    1               ; VSB 物理基址
+        .DomainBase             RESQ    1               ; domain 虚拟基址
+        .DomainPhysicalBase     RESQ    1               ; domain 物理基址
+        .DomainPhysicalTop      RESQ    1               ; domain 物理地址顶部
+
+        ;;
+        ;; Guest 状态
+        ;;
+        .GuestStatus            RESD    1
+
+
+        ALIGNB 8
+
+        ;;
+        ;; guest 环境入口点
+        ;;
+        .GuestEntry             RESQ    1
+        .GuestStack             RESQ    1               ; guest 使用的栈
+
+        ;;
+        ;; VMM 入口
+        ;;
+        .HostEntry              RESQ    1
+        .HostStack              RESQ    1
+
+        ;;
+        ;; 每个 VM 的 EP4TA
+        ;;
+        .Ep4taBase              RESQ    1               ; 指向 EPT PML4T 虚拟地址
+        .Ep4taPhysicalBase      RESQ    1               ; 指向 EPT PML4T 物理地址
+
+        
+        ;;
+        ;; 每个 VM 有自己的 VMX-preemption timer value 值
+        ;;
+        .VmxTimerValue          RESD    1
+
+        ;;
+        ;; 每个 logical processor 的每个VMCS的 VPID
+        ;;
+        .Vpid                   RESW    1
+        
+
+
+
+        ALIGNB 4
+        .GuestFlags             RESD    1
+
+        ;;
+        ;; 某些情况下，传给 VMM do_xxx函数的参数！
+        ;;
+        .DoProcessParam         RESD    1
+        .VmmDumpVmcsMask        RESQ    1
+
+        ;;
+        ;; APIC-access address
+        ;;
+        .ApicAccessAddress      RESQ    1
+        .ApicAccessPhyAddress   RESQ    1
+
+        ;;
+        ;; #### 下面的区域需要在初始化时分配页面 ####
+        ;; 1) IoBitmap A page
+        ;; 2) IoBitmap B page
+        ;; 3) Virtual-access page
+        ;; 4) MSR-Bitmap page
+        ;; 5) VM-entry/VM-exit MSR store page
+        ;; 6) VM-exit MSR load page
+        ;; 7) IoVteBuffer page
+        ;; 8) MsrVteBuffer page
+        ;; 9) GpaHteBuffer page
+        ;;
+
+        ;;
+        ;; I/O-Bitmap Address A & B
+        ;;        
+        .IoBitmapAddressA       RESQ    1
+        .IoBitmapPhyAddressA    RESQ    1
+        .IoBitmapAddressB       RESQ    1
+        .IoBitmapPhyAddressB    RESQ    1
+
+        ;;
+        ;; Virtual-APIC address
+        ;;
+        .VirtualApicAddress     RESQ    1
+        .VirtualApicPhyAddress  RESQ    1
+
+        ;;
+        ;; MSR-Bitmap Address
+        ;;
+        .MsrBitmapAddress       RESQ    1
+        .MsrBitmapPhyAddress    RESQ    1
+
+
+        ;;
+        ;; VM-exit MSR-store Address
+        ;; 
+        .VmEntryMsrLoadAddress:       
+        .VmExitMsrStoreAddress          RESQ    1
+        .VmEntryMsrLoadPhyAddress:
+        .VmExitMsrStorePhyAddress       RESQ    1
+
+        ;;
+        ;; VM-exit MSR-load Address
+        ;;        
+        .VmExitMsrLoadAddress           RESQ    1
+        .VmExitMsrLoadPhyAddress        RESQ    1
+
+        ;;
+        ;; IO 值列表 buffer，用来记录 guest 向 IO 端写入的值 
+        ;;
+        .IoVteBuffer                    RESQ    1
+        .IoVteBufferPhyAddr             RESQ    1
+
+        ;;
+        ;; MSR 值列表 buffer，用来记录 guest 向 MSR 写的值
+        ;;
+        .MsrVteBuffer                   RESQ    1
+        .MsrVteBufferPhyAddr            RESQ    1
+
+        ;;
+        ;; EPT page-fault 处理例程表 buffer，用来记录 GPA 的特殊处理
+        ;;
+        .GpaHteBuffer                   RESQ    1
+        .GpaHteBufferPhyAddr            RESQ    1
+
+
+        ;;
+        ;; IO & MSR VTE 管理记录
+        ;;
+        .IoVteCount                     RESD    1
+        .MsrVteCount                    RESD    1
+        .GpaHteCount                    RESD    1
+        .IoVteIndex                     RESQ    1
+        .MsrVteIndex                    RESQ    1
+        .GpaHteIndex                    RESQ    1
+
+
+        .VmEntryMsrLoadCount:
+        .VmExitMsrStoreCount            RESD    1
+        .VmExitMsrLoadCount             RESD    1
+
+
+        ;;
+        ;; IO 操作标志位
+        ;;
+        .IoOperationFlags               RESD    1
+
+
+        ;;
+        ;; guest-GDT 管理块
+        ;;       
+        .GuestGmb                       RESB    GGMB_SIZE
+
+        
+        ALIGNB 4
+        ;;
+        ;;guest-IDT 管理块
+        ;;
+        .GuestImb                       RESB    GIMB_SIZE
+
+        ;;
+        ;; guest-TSS 管理块
+        ;;
+        .GuestTmb                       RESB    GTMB_SIZE
+
+
+        ;;
+        ;; guest-status 管理块
+        ;; 
+        .GuestSmb                       RESB    GSMB_SIZE
+
+
+        ALIGNB 8
+        ;;
+        ;; EPTP list address
+        ;;
+        .EptpListAddress                RESQ    1
+
+
+        ALIGNB 64
+        ;;
+        ;; posted-interrupt descriptor
+        ;;
+        PostedInterruptDesc             RESB    64
+
+
+        VMB_SIZE                        EQU     $
+        VMCS_MANAGE_BLOCK_SIZE          EQU     $
+endstruc
+```
 
 
 # VSB 结构
