--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -217,9 +217,7 @@ vmptrld [ebp + PCB.GuestA]
 vmptrld [ebp + PCB.GuestA + VMB.PhysicalBase]
 ```
 
-Vsbbase 指向 VM 对应的 VSB (VM Store Block）结构，而 Domain Base 指向 VM 所
-
-使用的内存 domain 基址（参见 6.3.1 节）。Guestentry 和 Hostentry 分别指向 guest 和 host 的入口地址。每个虚拟机的 Guestentry 值一般情况下是不同的，Hostentry 值可以样，表示 VMM 管理多个虚拟机。
+VsbBase 指向 VM 对应的 VSB (VM Store Block）结构，而 Domain Base 指向 VM 所使用的内存 domain 基址（参见 6.3.1 节）。GuestEntry 和 HostEntry 分别指向 guest 和 host 的入口地址。每个虚拟机的 Guestentry 值一般情况下是不同的，Hostentry 值可以样，表示 VMM 管理多个虚拟机。
 
 Vpid 用来设置每个 VMCS 属于自己的 VPID 值，Vmxtimer Value 是每个 VM 所使用的定时器初始计数值。Guestflags 用来设置 guest 的运行模式及其他标志位。
 
