--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/11. VMM初始化实例/1. VMCS相关数据结构.md
@@ -217,7 +217,7 @@ vmptrld [ebp + PCB.GuestA]
 vmptrld [ebp + PCB.GuestA + VMB.PhysicalBase]
 ```
 
-VsbBase 指向 VM 对应的 VSB (VM Store Block）结构，而 Domain Base 指向 VM 所使用的内存 domain 基址（参见 6.3.1 节）。GuestEntry 和 HostEntry 分别指向 guest 和 host 的入口地址。每个虚拟机的 Guestentry 值一般情况下是不同的，Hostentry 值可以样，表示 VMM 管理多个虚拟机。
+VsbBase 指向 VM 对应的 VSB (VM Store Block）结构，而 Domain Base 指向 VM 所使用的内存 domain 基址（参见 6.3.1 节）。GuestEntry 和 HostEntry 分别指向 guest 和 host 的入口地址。每个虚拟机的 Guestentry 值一般情况下是不同的，Hostentry 值可以一样，表示 VMM 管理多个虚拟机。
 
 Vpid 用来设置每个 VMCS 属于自己的 VPID 值，Vmxtimer Value 是每个 VM 所使用的定时器初始计数值。Guestflags 用来设置 guest 的运行模式及其他标志位。
 
@@ -235,14 +235,12 @@ Vpid 用来设置每个 VMCS 属于自己的 VPID 值，Vmxtimer Value 是每个
 %define GUEST FLAG UNRESTRICTED 10h
 
 %define GUEST FLAG EPT 20h
-
 %define GUEST FLAG_ USER 40h
 ```
 
 `inc\vmcs.inc` 中定义了 7 个 GUEST FLAG 值。在对 VMCS 区域初始化时，可以使用这些标志位来设置目标 guest 的运行环境。
 
 接下来，为每个 VMCS 区域指定自己所引用的访问区域，包括 1O bitmap A 和 B 区域、Virtual- APIC page shadow 页面、MSR bitmap 区域、VM- exit MSR store 及 Vm-exit MSR load 区域。VM- entry MSR load 区域和 VM- exit MSR Store 区域重叠，而 APIC-acc paeg 地址应该设置为 IA32APIC_BASE 寄存器中 APC 物理基址值。
-
 
 # VSB 结构
 
