--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -456,13 +456,15 @@ DoReadMsrForApicBase.Done:
 (2) 从 VTE 表项里读取 guest 尝试写入 `IA32_APIC_BASE` 寄存器里的**原值**, 写入 **guest 对应的 VSB 区域**中.
 
 ```
-        ;; VMB对应一个虚拟机实例
+        ;; 一个VMB结构体对应一个虚拟机实例
         ;; 获取VMB中的VSB Base
         mov ebx, [ebx + VMB.VsbBase]
         ;; 从 VTE 表项读取原值
         mov edx, [eax + MSR_VTE.Value + 4]
         mov eax, [eax + MSR_VTE.Value]
         ;; 将原值写入guest中对应的VSB区域
+        ;; ebx是该VM对应的VSB Base
+        ;; 原值写入VSB的
         mov [ebx + VSB.Rax], eax
         mov [ebx + VSB.Rdx], edx
 ```
