--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -464,7 +464,7 @@ DoReadMsrForApicBase.Done:
         mov eax, [eax + MSR_VTE.Value]
         ;; 将原值写入guest中对应的VSB区域
         ;; ebx是该VM对应的VSB Base
-        ;; 原值写入VSB的
+        ;; 原值写入VSB的RAX域和RDX域
         mov [ebx + VSB.Rax], eax
         mov [ebx + VSB.Rdx], edx
 ```
@@ -476,4 +476,10 @@ GetMsrVte 函数实现在 `lib\Vmx\VmxMsr.asm` 文件里,
 当没有 MSR 对应的 MSR VTE 表项时, 返回 0 值. 从 VTE 表项**读取MSR值**复制到 VSB(VM Store Block) 区域后, 在执行 VMRESUME 指令前, 从 **VSB 区域**恢复guest的**context信息**.
 
 ## 处理 guest 访问 local APIC
+
+guest尝试**读或者写 APIC-page** 的值时, 由于 APIC-page 的基址(`IA32_APIC_BASE`提供)并**没有EPT映射**, 从而导致由于EPT violation故障而产生VM-exit.
+
+```
+
+```
 
