--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -480,6 +480,37 @@ GetMsrVte 函数实现在 `lib\Vmx\VmxMsr.asm` 文件里,
 guest尝试**读或者写 APIC-page** 的值时, 由于 APIC-page 的基址(`IA32_APIC_BASE`提供)并**没有EPT映射**, 从而导致由于EPT violation故障而产生VM-exit.
 
 ```
-
+        ;;
+        ;; 读取发生 EPT violation 的 guest-physical address 值
+        ;;
+        REX.Wrxb
+        mov ebx, [ebp + PCB.ExitInfoBuf + EXIT_INFO.GuestPhysicalAddress]
+        
+        ;;
+        ;; 检查 GPA 是否需要进行额外处理
+        ;;
+        REX.Wrxb
+        mov esi, ebx
+        REX.Wrxb
+        and esi, ~0FFFh
+        call GetGpaHte
+        REX.Wrxb
+        test eax, eax
+        jz DoEptViolaton.next        
+        REX.Wrxb
+        mov eax, [eax + GPA_HTE.Handler]
+        call eax
+        
+        ;;
+        ;; 处理完毕后，是否需要修复 EPT violation 故障
+        ;; a）需要则执行下面的修复工作
+        ;; b）否则直接返回
+        ;;
+        cmp eax, EPT_VIOLATION_FIXING
+        jne DoEptViolation.resume
+        
+DoEptViolaton.next:
 ```
+
+上面代码来自`DoEptViolaton`例程, 它读取引发 EPT violation 故障的GPA地址值, 然后检查这个GPA是否需要额外处理. 使用 `GetGpaHte` 函数来查找GPA地址值对应的HTE(Handler Table Entry)表项, 如果找到则调用 GPA 对应的处理例程来处理. 处理完毕后检查返回值来确定
 
