--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -512,5 +512,257 @@ guest尝试**读或者写 APIC-page** 的值时, 由于 APIC-page 的基址(`IA3
 DoEptViolaton.next:
 ```
 
-上面代码来自`DoEptViolaton`例程, 它读取引发 EPT violation 故障的GPA地址值, 然后检查这个GPA是否需要额外处理. 使用 `GetGpaHte` 函数来查找GPA地址值对应的HTE(Handler Table Entry)表项, 如果找到则调用 GPA 对应的处理例程来处理. 处理完毕后检查返回值来确定
+上面代码来自`DoEptViolaton`例程, 它读取引发 EPT violation 故障的GPA地址值, 然后检查这个GPA是否需要额外处理. 使用 `GetGpaHte` 函数来查找**GPA地址值**对应的**HTE**(Handler Table Entry)表项, 如果找到则调用 GPA 对应的处理例程来处理. 处理完毕后检查返回值来确定是否需要修复 EPT violation 故障.
+
+```
+;-----------------------------------------------------------------------
+; EptHandlerForGuestApicPage()
+; input:
+;       none
+; output:
+;       eax - 处理码
+; 描述：
+;       1) 处理由于 guest APIC-page 而引起的 EPT violation
+;-----------------------------------------------------------------------
+EptHandlerForGuestApicPage:
+        push ebp
+        push ebx
+        push ecx
+        push edx
+        
+%ifdef __X64
+        LoadGsBaseToRbp
+%else
+        mov ebp, [gs: PCB.Base]
+%endif
+
+       
+        REX.Wrxb
+        mov ebx, [ebp + PCB.CurrentVmbPointer]
+        
+        ;;
+        ;; EPT violation 明细信息
+        ;;
+        mov eax, [ebp + PCB.ExitInfoBuf + EXIT_INFO.ExitQualification]
+        
+        ;;
+        ;; guest 访问 APIC-page 的偏移量
+        ;;
+        REX.Wrxb
+        mov edx, [ebp + PCB.ExitInfoBuf + EXIT_INFO.GuestPhysicalAddress]    
+        and edx, 0FFFh
+        
+        ;;
+        ;; 检查 guest 访问类型
+        ;;
+        test eax, EPT_READ
+        jnz EptHandlerForGuestApicPage.Read
+        test eax, EPT_EXECUTE
+        jz EptHandlerForGuestApicPage.Write
+        
+        ;;
+        ;; 处理 guest 尝试执行 APIC-page 页面，注入一个 #PF(0x11) 异常
+        ;;
+        SetVmcsField    VMENTRY_INTERRUPTION_INFORMATION, INJECT_EXCEPTION_PF
+        SetVmcsField    VMENTRY_EXCEPTION_ERROR_CODE, 0011h
+        REX.Wrxb
+        mov eax, [ebp + PCB.ExitInfoBuf + EXIT_INFO.GuestLinearAddress] 
+        REX.Wrxb
+        mov cr2, eax
+        jmp EptHandlerForGuestApicPage.Done
+        
+EptHandlerForGuestApicPage.Write:
+        ;;
+        ;; 读取源操作数值
+        ;;
+        GetVmcsField    GUEST_RIP
+        REX.Wrxb
+        mov esi, eax
+        call get_system_va_of_guest_va
+        REX.Wrxb
+        mov esi, eax
+        mov al, [esi]                           ; opcode
+        cmp al, 89h
+        je EptHandlerForGuestApicPage.Write.Opcode89
+        cmp al, 0C7h
+        je EptHandlerForGuestApicPage.Write.OpcodeC7
+        
+        ;;
+        ;; ### 注意，作为示例，这里不处理其它指令情况，包括：
+        ;; 1) 使用其它 opcode 的指令
+        ;; 1) 含有 REX prefix（4xH) 指令
+        ;;
+        jmp EptHandlerForGuestApicPage.Done
+        
+EptHandlerForGuestApicPage.Write.OpcodeC7:
+        ;;
+        ;; 分析 ModRM 字节
+        ;;
+        mov al, [esi + 1]
+        mov cl, al
+        and ecx, 7        
+        cmp cl, 4
+        sete cl                                 ; 如果 ModRM.r/m = 4，则 cl = 1，否则 cl = 0
+        shr al, 6
+        jz EptHandlerForGuestApicPage.Write.@2  ; ModRM.Mod = 0，则 ecx += 0
+        cmp al, 1                               ; ModRM.Mod = 1，则 ecx += 2
+        je EptHandlerForGuestApicPage.Write.OpcodeC7.@1
+        add ecx, 2        
+EptHandlerForGuestApicPage.Write.OpcodeC7.@1:
+        add ecx, 2                              ; ModRM.Mod = 2, 则 ecx += 4
+                                                ; ModRM.Mod = 3，属于错误 encode
+EptHandlerForGuestApicPage.Write.@2:
+        ;;
+        ;; 读取写入立即数
+        ;;
+        mov eax, [esi + ecx + 2]
+
+        jmp EptHandlerForGuestApicPage.Write.Next
+        
+EptHandlerForGuestApicPage.Write.Opcode89:
+        ;;
+        ;; 读取源操作数
+        ;;
+        mov esi, [esi + 1]
+        shr esi, 3
+        and esi, 7
+        call get_guest_register_value        
+
+EptHandlerForGuestApicPage.Write.Next:
+        ;;
+        ;; virtual APIC-page 页面
+        ;;
+        REX.Wrxb
+        mov esi, [ebx + VMB.VirtualApicAddress]   
+        
+        ;;
+        ;; APIC-page 可写的 offset 为，写其它区域忽略
+        ;; 1) 80h:      TPR
+        ;; 2) B0h:      EOI
+        ;; 3) D0h:      LDR
+        ;; 4) E0h:      DFR
+        ;; 5) F0h:      SVR
+        ;; 6) 2F0h - 370h:      LVT
+        ;; 7) 380h:     TIMER-ICR
+        ;; 8) 3E0h:     TIMER-DCR
+        ;;
+        cmp edx, 80h
+        jne EptHandlerForGuestApicPage.Write.@1
+        
+        DEBUG_RECORD    "[EptHandlerForGuestApicPage]: wirte to APIC-page"
+        
+        ;;
+        ;; 写入 TPR
+        ;;
+        mov [esi + 80h], eax
+        jmp EptHandlerForGuestApicPage.Done
+        
+EptHandlerForGuestApicPage.Write.@1:
+        
+        jmp EptHandlerForGuestApicPage.Done
+
+
+
+EptHandlerForGuestApicPage.Read:        
+        ;;
+        ;; 分析指令
+        ;;
+        GetVmcsField    GUEST_RIP
+        REX.Wrxb
+        mov esi, eax
+        call get_system_va_of_guest_va
+        REX.Wrxb
+        mov esi, eax
+        mov al, [esi]                           ; opcode
+        cmp al, 8Bh
+        je EptHandlerForGuestApicPage.Read.Opcode8B
+        
+        ;;
+        ;; ### 注意，作为示例，这里不处理其它指令情况，包括：
+        ;; 1) 使用其它 opcode 的指令
+        ;; 1) 含有 REX prefix（4xH) 指令
+        ;;
+        jmp EptHandlerForGuestApicPage.Done
+        
+EptHandlerForGuestApicPage.Read.Opcode8B:
+        ;;
+        ;; 读取目标操作数 ID
+        ;;
+        mov esi, [esi + 1]
+        shr esi, 3
+        and esi, 7
+          
+        ;;
+        ;; APIC-page 内下面的 offset 为可读区域
+        ;; 1) 20h:      APIC ID
+        ;; 2) 30h:      VER
+        ;; 3) 80h:      TPR
+        ;; 4) 90h:      APR
+        ;; 5) A0h:      PPR
+        ;; 6) B0h:      EOI
+        ;; 7) C0h:      RRD
+        ;; 8) D0h:      LDR
+        ;; 9) E0h:      DFR
+        ;; 10) F0h:     SVR
+        ;; 11) 100h - 170h:     ISR
+        ;; 12) 180h - 1F0h:     TMR
+        ;; 13) 200h - 270h:     IRR
+        ;; 14) 280h:    ESR
+        ;; 15) 2F0h - 370h:     LVT
+        ;; 16) 380h:    TIMER-ICR
+        ;; 17) 3E0h:    TIMER-DCR
+        ;;
+
+        cmp edx, 80h
+        jne EptHandlerForGuestApicPage.Read.@1
+        
+        DEBUG_RECORD    "[EptHandlerForGuestApicPage]: read from APIC-page"  
+        
+        ;;
+        ;; 写入目标寄存器
+        ;;
+        
+        REX.Wrxb
+        mov eax, [ebx + VMB.VirtualApicAddress]           
+        mov edi, [eax + 80h]
+        call set_guest_register_value
+        jmp EptHandlerForGuestApicPage.Done
+
+EptHandlerForGuestApicPage.Read.@1:        
+
+EptHandlerForGuestApicPage.Done:
+        call update_guest_rip
+        mov eax, EPT_VIOLATION_NO_FIXING
+        pop edx
+        pop ecx
+        pop ebx
+        pop ebp
+        ret
+```
+
+EptHandlerForGuestApicPage 例程用来模拟 guest 访间 local APIC，这是一个相当烦琐的操作。这个函数实现在 1 lib Vmxapic.asm 文件里。作为示例，这个函数只实现了基本的框架功能，并没有处理所有可能发生的情况。
+
+这个例程需要处理 guest i 的两大类操作：读和写 APIC-page 区城。VMCS 区城的 Exit Qualification 字段记录 EPT violation 的明细信息，其中 bis2:0 指示访问的类型（参见 3.10.1.14 节）。
+
+obit0 为 1 时，表示进行了读访问间。
+
+e bit 1 为 1 时，表示进行了写访问。
+
+bit2 为 1 时，表示进行了执行访问。
+
+Epthandlerforguestapicpage 例程可以根据 Exit Qualification 字段的 bits2:0 来判断 guest 当前对 APIC-page 进行了什么访问，从而做出相应的处理。
+
+当属于读 APIC-page 页面时，这个例程进行下面的处理
+
+ (1) 分析 guest 访问指令。典型地，一个读访问使用 MOV 指令来完成，这个例程只处理了 MOV 指令（opcode 码为 8BH）。另外，local APIC 不能支持超过 32 位的访问宽度，并且某些处理器也不支持低于 32 位的访问宽度（譬如 16 位）。这里也没有处理 guest 使用 64 位的访问宽度的情况（即指令存在 REX prefix
+
+ (2) 读取目标操作数 ID 值。使用 MOV 指令读 APIC-page 时，目标操作数必定是寄存器。通过分析指令编码的 MODRM 字段来获取目标操作数的 ID 值。
+
+ (3) 分析读 APIC-page 页面的 offset 值是否合法。APIC-page 的某些区域是保留的访问这些保留区域是未定义的。因此，Epthandlerforguest Apicpage 例程需要检查访问的 offset 是否合法。作为示例，这里只处理了访问 TPR 寄存器的情况（offset 为 80H）。
+
+ (4) 从 virtual- APIC page 页面的 80H (TPR）读取相应的值写入目标寄存器里。
+
+这个 virtual- APIC page 是 APIC-page 的虚拟页面，每个 guest 都有自己独立的虚拟的 APIC-page 页面，用来存放 local APIC 的虚拟数据。当写 local APIC 时往这个虚拟的页面貨入数据，当读 local APIC 时从这个虚拟的页面读取数据。
+
+当属于写 APIC-page 页面时，这个例程进行下面的处理：
 
