--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -512,7 +512,9 @@ guest尝试**读或者写 APIC-page** 的值时, 由于 APIC-page 的基址(`IA3
 DoEptViolaton.next:
 ```
 
-上面代码来自`DoEptViolaton`例程, 它读取引发 EPT violation 故障的GPA地址值, 然后检查这个GPA是否需要额外处理. 使用 `GetGpaHte` 函数来查找**GPA地址值**对应的**HTE**(Handler Table Entry)表项, 如果找到则调用 GPA 对应的处理例程来处理. 处理完毕后检查返回值来确定是否需要修复 EPT violation 故障.
+上面代码来自`DoEptViolaton`例程, 它**读取**引发 EPT violation 故障的**GPA地址值**, 然后检查这个GPA是否需要额外处理. 
+
+使用 `GetGpaHte` 函数来查找**GPA地址值**对应的**HTE**(Handler Table Entry)表项, 如果找到则调用 GPA 对应的处理例程来处理. 处理完毕后检查返回值来确定是否需要修复 EPT violation 故障.
 
 ```
 ;-----------------------------------------------------------------------
@@ -740,15 +742,13 @@ EptHandlerForGuestApicPage.Done:
         ret
 ```
 
-EptHandlerForGuestApicPage 例程用来模拟 guest 访间 local APIC，这是一个相当烦琐的操作。这个函数实现在 1 lib Vmxapic.asm 文件里。作为示例，这个函数只实现了基本的框架功能，并没有处理所有可能发生的情况。
+EptHandlerForGuestApicPage 例程用来模拟 guest 访间 local APIC，这是一个相当烦琐的操作。这个函数实现在 `lib\Vmx\VmxApic.asm` 文件里。作为示例，这个函数只实现了基本的**框架功能**，并**没有处理所有可能发生的情况**。
 
-这个例程需要处理 guest i 的两大类操作：读和写 APIC-page 区城。VMCS 区城的 Exit Qualification 字段记录 EPT violation 的明细信息，其中 bis2:0 指示访问的类型（参见 3.10.1.14 节）。
+这个例程需要处理 guest 的两大类操作：读和写 APIC-page 区城。VMCS 区城的 Exit Qualification 字段记录 EPT violation 的明细信息，其中 bis2:0 指示访问的类型（参见 3.10.1.14 节）。
 
-obit0 为 1 时，表示进行了读访问间。
-
-e bit 1 为 1 时，表示进行了写访问。
-
-bit2 为 1 时，表示进行了执行访问。
+* bit 0 为 1 时，表示进行了读访问。
+* bit 1 为 1 时，表示进行了写访问。
+* bit 2 为 1 时，表示进行了执行访问。
 
 Epthandlerforguestapicpage 例程可以根据 Exit Qualification 字段的 bits2:0 来判断 guest 当前对 APIC-page 进行了什么访问，从而做出相应的处理。
 
