--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -744,15 +744,15 @@ EptHandlerForGuestApicPage.Done:
 
 EptHandlerForGuestApicPage 例程用来模拟 guest 访间 local APIC，这是一个相当烦琐的操作。这个函数实现在 `lib\Vmx\VmxApic.asm` 文件里。作为示例，这个函数只实现了基本的**框架功能**，并**没有处理所有可能发生的情况**。
 
-这个例程需要处理 guest 的两大类操作：读和写 APIC-page 区城。VMCS 区城的 Exit Qualification 字段记录 EPT violation 的明细信息，其中 bis2:0 指示访问的类型（参见 3.10.1.14 节）。
+这个例程需要处理 guest 的两大类操作：**读和写 APIC-page 区城**。VMCS 区城的 **Exit Qualification** 字段记录 EPT violation 的明细信息，其中 `bis 2:0` 指示访问的类型（参见 3.10.1.14 节）。
 
 * bit 0 为 1 时，表示进行了读访问。
 * bit 1 为 1 时，表示进行了写访问。
 * bit 2 为 1 时，表示进行了执行访问。
 
-Epthandlerforguestapicpage 例程可以根据 Exit Qualification 字段的 bits2:0 来判断 guest 当前对 APIC-page 进行了什么访问，从而做出相应的处理。
+EptHandlerForGuestApicPage 例程可以根据 Exit Qualification 字段的 `bits 2:0` 来判断 guest 当前对 APIC-page 进行了什么访问，从而做出相应的处理。
 
-当属于读 APIC-page 页面时，这个例程进行下面的处理
+当属于**读 APIC-page 页面**时，这个例程进行下面的处理
 
  (1) 分析 guest 访问指令。典型地，一个读访问使用 MOV 指令来完成，这个例程只处理了 MOV 指令（opcode 码为 8BH）。另外，local APIC 不能支持超过 32 位的访问宽度，并且某些处理器也不支持低于 32 位的访问宽度（譬如 16 位）。这里也没有处理 guest 使用 64 位的访问宽度的情况（即指令存在 REX prefix
 
