--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -754,11 +754,11 @@ EptHandlerForGuestApicPage 例程可以根据 Exit Qualification 字段的 `bits
 
 当属于**读 APIC-page 页面**时，这个例程进行下面的处理
 
- (1) 分析 guest 访问指令。典型地，一个读访问使用 MOV 指令来完成，这个例程只处理了 MOV 指令（opcode 码为 8BH）。另外，local APIC 不能支持超过 32 位的访问宽度，并且某些处理器也不支持低于 32 位的访问宽度（譬如 16 位）。这里也没有处理 guest 使用 64 位的访问宽度的情况（即指令存在 REX prefix
+ (1) **分析 guest 访问指令**。典型地，一个读访问使用 MOV 指令来完成，这个例程**只处理了 MOV 指令**（**opcode** 码为 **8BH**）。另外，local APIC 不能支持超过 32 位的访问宽度，并且某些处理器也不支持低于 32 位的访问宽度（譬如 16 位）。这里也没有处理 guest 使用 64 位的访问宽度的情况（即指令存在 REX prefix
 
- (2) 读取目标操作数 ID 值。使用 MOV 指令读 APIC-page 时，目标操作数必定是寄存器。通过分析指令编码的 MODRM 字段来获取目标操作数的 ID 值。
+ (2) 读取**目标操作数 ID 值**。使用 MOV 指令读 APIC-page 时，目标操作数必定是**寄存器**。通过分析**指令编码**的 MODRM 字段来获取目标操作数的 ID 值。
 
- (3) 分析读 APIC-page 页面的 offset 值是否合法。APIC-page 的某些区域是保留的访问这些保留区域是未定义的。因此，Epthandlerforguest Apicpage 例程需要检查访问的 offset 是否合法。作为示例，这里只处理了访问 TPR 寄存器的情况（offset 为 80H）。
+ (3) 分析读 APIC-page 页面的 **offset** 值是否合法。APIC-page 的某些区域是保留的访问这些保留区域是未定义的。因此, EptHandlerForGuestApicPage 例程需要检查访问的 offset 是否合法。作为示例，这里只处理了访问 TPR 寄存器的情况（offset 为 80H）。
 
  (4) 从 virtual- APIC page 页面的 80H (TPR）读取相应的值写入目标寄存器里。
 
