--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -770,3 +770,21 @@ EptHandlerForGuestApicPage 例程可以根据 Exit Qualification 字段的 `bits
 
 当属于写 APIC-page 页面时，这个例程进行下面的处理：
 
+(1) 分析 guest 指令。写 local APIC 操作的指令相对更丰富些。典型地，可以有下面的指令形式：
+
+```
+mov  [ebx + TPR], 50h
+mov  eax. 50h
+mov  [ebx + TPR], eax
+```
+
+这两条写 local APIC 的 MOV 指令，它们的 **opcode** 码是**不同的**。作为示例，在这个例程只处理了 opcode 码为 89H 以及 CH 时的指令情况。
+
+* 指令 opcode 码为 89H 时，源操作数是寄存器。从 MODRM 字节的 bits5:3 读取寄存器 ID 值，然后使用 get guest register value 函数读取寄存器值。
+* 指令 opcode 码为 C7H 时，源操作数是 32 位立即数，则分析 MODRM 字节是否存在 SIB 以及 displacement 值，然后从指令 encode 中读取 32 位的立即数值。
+
+(2) 分析写人 APIC-page 的 offset 值，检査是否属于 local APIC 可写的寄存器（只读寄存器以及保留区城都不可写）。作为示例，这里只处理了 TPR 寄存器（80H）。
+
+当 guest 尝试执行 APIC-page 页面时，这个例程反射一个#F 异常给 guest 处理，错误码为 0011H，指示页面不可执行。将 CR2 寄存器设置为 guest-linear address 值。注意：这个处理实际上与 guest 相关，要取决于 guest 如何映射 APIC-page 区域。
+
+一个实用的 Epthandlerforguestapicpage 例程需要完善很多细节，各种可能遇到的情况都要考虑进去，需要进行烦琐的处理工作才能完全模拟 guest 访问 local APIC。
