--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -785,6 +785,48 @@ mov  [ebx + TPR], eax
 
 (2) 分析写人 APIC-page 的 offset 值，检査是否属于 local APIC 可写的寄存器（只读寄存器以及保留区城都不可写）。作为示例，这里只处理了 TPR 寄存器（80H）。
 
-当 guest 尝试执行 APIC-page 页面时，这个例程反射一个#F 异常给 guest 处理，错误码为 0011H，指示页面不可执行。将 CR2 寄存器设置为 guest-linear address 值。注意：这个处理实际上与 guest 相关，要取决于 guest 如何映射 APIC-page 区域。
+### 执行 APIC-page 页面
+
+当 guest 尝试执行 APIC-page 页面时，这个例程反射一个 `#F` 异常给 guest 处理，错误码为 0011H，指示页面不可执行。将 CR2 寄存器设置为 guest-linear address 值。注意：这个处理实际上与 guest 相关，要取决于 guest 如何映射 APIC-page 区域。
 
 一个实用的 Epthandlerforguestapicpage 例程需要完善很多细节，各种可能遇到的情况都要考虑进去，需要进行烦琐的处理工作才能完全模拟 guest 访问 local APIC。
+
+## guest端代码
+
+在`chap07\ex7-3`目录下`guest_ex.asm`文件是这个例子的guest主体代码
+
+这个 guest 代码的工作是：
+
+ (1) 尝试将 IA32 APIC BASE 寄存器的 bisN-1:12 设置为 0100000O（即新的
+
+le Markup Toolbar
+
+APIC-page 基址）。
+
+ (2) 从 1A32 APIC BASE 寄存器读取 APIC-page 基址，并打印出来
+
+ (3) 尝试向 local APIC 的 TPR 寄存器（80H）写人值 50H。注意，这里 MOV 指令使
+
+用寄存器作为源操作数（即 opcode 码为 89H）。
+
+ (4) 读取 TPR 寄存器（80H），并打印出来
+
+ (5) 尝试再次向 TPR 寄存器（80H）写入值 60H。注意，这里 MOV 指令使用立即数作为源操作数（即 opcode 码为 C7H）。
+
+ (6) 再次读取 TPR 寄存器（80H），并打印出来。
+
+## 编译及运行
+
+这个例子，我们可以使用下面的命令进行编译
+
+ (1) BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE -D X64-DGUEST X64  (2) BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE-D X64  (3 BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE
+
+第 1 个命令将 host 与 guest 都编译为 64 位。第 2 个命令将 host 编译为 64 位，guest
+
+编译为 32 位。第 3 个命令将 host 与 guest都编译为 32位。
+
+下面以 host 与 guest 都是64 位环境为例，观察例子的运行结果。
+
+在 Vmware 里加载 demo. Img 映像文件运行，在 CPU0 的命令选择器上按数字《1> 键
+
+让 CPUI 进入 guest 运行。按下两次《F2> 键切换到 CPUI 的 guest 屏幕，如图 7-5 所示。
