--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -793,7 +793,69 @@ mov  [ebx + TPR], eax
 
 ## guest端代码
 
-在`chap07\ex7-3`目录下`guest_ex.asm`文件是这个例子的guest主体代码
+在`chap07\ex7-3`目录下`guest_ex.asm`文件是这个例子的guest主体代码.
+
+```
+        ;;
+        ;; 加入 ex.asm 模块使用的头文件
+        ;;
+        %include "ex.inc"
+        
+        
+        ;;
+        ;; 例子 ex7-3：实现 local APIC 虚拟化
+        ;; 编译命令可以为：
+        ;;      1) build -DDEBUG_RECORD_ENABLE -DGUEST_ENABLE -D__X64 -DGUEST_X64
+        ;;      2) build -DDEBUG_RECORD_ENABLE -DGUEST_ENABLE -D__X64
+        ;;      3) build -DDEBUG_RECORD_ENABLE -DGUEST_ENABLE
+        ;;
+        
+
+        ;;
+        ;; 设置 local APIC base 值为 01000000h
+        ;;
+        mov ecx, IA32_APIC_BASE
+        mov eax, 01000000h | APIC_BASE_BSP | APIC_BASE_ENABLE
+        xor edx, edx
+        wrmsr
+
+        mov esi, GuestEx.Msg0
+        call PutStr
+        mov ecx, IA32_APIC_BASE
+        rdmsr
+        mov esi, eax
+        and esi, ~0FFFh
+        mov edi, edx
+        call PrintQword
+        call PrintLn
+                
+        mov R3, GUEST_APIC_BASE 
+        
+        ;;
+        ;; TPR = 50h
+        ;;
+        mov eax, 50h
+        mov [R3 + LAPIC_TPR], eax        
+        mov esi, GuestEx.Msg1
+        call PutStr        
+        mov esi, [R3 + LAPIC_TPR]        
+        call PrintValue
+        call PrintLn
+
+        ;;
+        ;; TPR = 60h
+        ;;
+        mov DWORD [R3 + LAPIC_TPR], 60h    
+        mov esi, GuestEx.Msg1
+        call PutStr        
+        mov esi, [R3 + LAPIC_TPR]        
+        call PrintValue        
+        
+        jmp $
+        
+GuestEx.Msg0    db      'APIC base: ', 0
+GuestEx.Msg1    db      'TPR:       ', 0
+```
 
 这个 guest 代码的工作是：
 
@@ -819,11 +881,13 @@ APIC-page 基址）。
 
 这个例子，我们可以使用下面的命令进行编译
 
- (1) BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE -D X64-DGUEST X64  (2) BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE-D X64  (3 BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE
+1) `build -DDEBUG_RECORD_ENABLE -DGUEST_ENABLE -D__X64 -DGUEST_X64`
 
-第 1 个命令将 host 与 guest 都编译为 64 位。第 2 个命令将 host 编译为 64 位，guest
+2) `build -DDEBUG_RECORD_ENABLE -DGUEST_ENABLE -D__X64`
 
-编译为 32 位。第 3 个命令将 host 与 guest都编译为 32位。
+3) `build -DDEBUG_RECORD_ENABLE -DGUEST_ENABLE`
+
+第 1 个命令将 host 与 guest 都编译为 64 位。第 2 个命令将 host 编译为 64 位，guest 编译为 32 位。第 3 个命令将 host 与 guest都编译为 32位。
 
 下面以 host 与 guest 都是64 位环境为例，观察例子的运行结果。
 
