--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
@@ -2,9 +2,9 @@
 
 前面一节介绍的local APIC虚拟化原理是使用EPT映射机制或MSR bitmap机制来监控guest访问local APIC页面, 并模拟写入和读取local APIC寄存器.
 
-VMX引进了原生的local APIC虚拟化机制, 由VMCS的secondary processor-based VM-execution control字段提供下面的功能.
+VMX引进了**原生的local APIC虚拟化机制**, 由VMCS的`secondary processor-based VM-execution control`字段提供下面的功能.
 
-- Virtualize APIC accesses(虚拟化APIC访问). 当"**virtualize APIC accesses**"位(bit 0)为1时, 将启用APIC\-access page页面. 处理器虚拟化guest线性访问APIC-access page页面的行为, 取决于"APIC-register virtualizaion"位的设置, 产生两种结果:
+- **Virtualize APIC accesses**(虚拟化APIC访问). 当"**virtualize APIC accesses**"位(bit 0)为1时, 将启用`APIC-access page`页面. 处理器虚拟化guest线性访问APIC-access page页面的行为, 取决于"APIC-register virtualizaion"位的设置, 产生两种结果:
     - 产生APIC access VM-exit, 或者APIC write VM-exit(见7.2.8).
     - 成功访问virtual-APIC page页面的数据, 或者虚拟化某项操作(比如EOI虚拟化).
 - Virtualize x2APIC mode(虚拟化x2APIC模式). 
