--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
@@ -4,12 +4,21 @@
 
 VMX引进了**原生的local APIC虚拟化机制**, 由VMCS的`secondary processor-based VM-execution control`字段提供下面的功能.
 
-- **Virtualize APIC accesses**(虚拟化APIC访问). 当"**virtualize APIC accesses**"位(bit 0)为1时, 将启用`APIC-access page`页面. 处理器虚拟化**guest线性访问APIC-access page页面**的行为, 取决于"APIC-register virtualizaion"位的设置, 产生两种结果:
-    - 产生APIC access VM-exit, 或者APIC write VM-exit(见7.2.8).
+* **Virtualize APIC accesses**(虚拟化APIC访问). 当"**virtualize APIC accesses**"位(bit 0)为1时, 将启用`APIC-access page`页面. 处理器虚拟化**guest线性访问APIC-access page页面**的行为, 取决于"APIC-register virtualization"位的设置, 产生两种结果:
+    - 产生**APIC access VM-exit**, 或者**APIC write VM-exit**(见7.2.8).
     - 成功访问virtual-APIC page页面的数据, 或者虚拟化某项操作(比如EOI虚拟化).
-- Virtualize x2APIC mode(虚拟化x2APIC模式). 
-- Use TPR shadow(启用TPR影子).
-- APIC-register virtualization(APIC寄存器虚拟化).
-- Virtua-interrupt delivery(虚拟中断的提交).
-- Posted-interrupt processing(通告的中断处理).
+* Virtualize x2 APIC mode（虚拟化 x2APIC 模式）。当“virtualize x2 APIC mode”位（bit4) 为 1 时，处理器虚拟化通过 MSR 来访问 800H~-8 FFH local APIC 寄存器的行为，取决于“APIC- register virtualization”位的设置，产生两种结果：成功访问 virtual- APIC page 页面的数据，或者虚拟化某项操作（譬如 EOI 虚拟化）。
 
+取决于 local APIC 是否为 x2APIC 模式，产生#GP 异常或者访问到 MSR 数据。Use TPR shadow（启用 TPR 影子）。当 primary processor- based VM- execution control 字段的“Use TPR shadow”位为 1 时，启用 virtual- APIC page 页面。在 virtual-- APIC page 页面的 80H 位置上存在一份 TPR shadow 数据，即 VTPR  (virtual TPR，虚拟 TPR 寄存器）。当 guest 访问 APIC- access page 页面内 80H 位置时，将访问到这份 VPTR 数据。
+
+APIC- register virtualization (APIC 寄存器虚拟化）。当“APIC- register virtualization”位（bit8) 为 1 时，将启用 virtual- APIC page 页面内可访问的 local APIC 虚拟寄存器（譬如 VISR、VEOI 等，参见 7.2.5 节表 7-2)。Virtual- interrupt delivery（虚拟中断的提交）。当“virtual-interrupt delivery”位
+
+ (bit9) 为 1 时，修改 virtual local APIC 的某些状态将引起 virtual- Interrupt 的悬挂时，对 pending virtual- -Interrupt 进行评估，通过仲裁后允许 virtual-interrupt 通过 guest-IDT 提交处理。
+
+Posted- interrupt processing（通告的中断处理）。当 pin- based VM- execution control 字段的 process posted interrupts”位为 1 时，处理器接收到“通知”的外部中断时不会产生 VM-exit，并且将 posted- -interrupt descriptor（通告中断描述符）内的 posted- Interrupt request（通告的中断请求）复制到 virtual- APIC page 内 VIRR 寄存器的虚拟中断请求列表里，形成虚拟中断的请求。处理器进行虚拟中断的评估和 delivery。
+
+local APIC 存在两种访问模式：XAPIC 和 x2APIC 模式。XAPIC 模式基于 memory mapped（内存映射）方式访问 local APIC 寄存器（使用 MOV 指令），而 x2APIC 基于 MSR 访问 local APIC 寄存器（使用 RDMSR 与 WRMSR 指令）。
+
+VMX 提供了这两种途径访问的虚拟化功能，分别在“virtualize APIC accesses”位与“virtualize x2 APIC mode”位里设置。但是，不能同时使用这两种途径的虚拟化（参见 4.4.1.3 节）。
+
+Local APIC 虚拟化设置主要基于 secondary processor- based VM- execution control 字段，而 primary processor- based VM- execution control 字段则提供了对“use TPR shadow 位的设置。
