--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
@@ -15,8 +15,10 @@ VMX引进了**原生的local APIC虚拟化机制**, 由VMCS的`secondary process
 * Virtual- interrupt delivery（虚拟中断的提交）。当“virtual-interrupt delivery”位(bit9) 为 1 时，修改 virtual local APIC 的某些状态将引起 virtual- Interrupt 的悬挂时，对 pending virtual- -Interrupt 进行评估，通过仲裁后允许 virtual-interrupt 通过 guest-IDT 提交处理。
 * Posted-interrupt processing（通告的中断处理）。当 pin-based VM-execution control 字段的 "process posted interrupts" 位为 1 时，处理器接收到“通知”的外部中断时不会产生 VM-exit，并且将 posted- -interrupt descriptor（通告中断描述符）内的 posted- Interrupt request（通告的中断请求）复制到 virtual- APIC page 内 VIRR 寄存器的虚拟中断请求列表里，形成虚拟中断的请求。处理器进行虚拟中断的评估和 delivery。
 
-local APIC 存在两种访问模式：XAPIC 和 x2APIC 模式。XAPIC 模式基于 memory mapped（内存映射）方式访问 local APIC 寄存器（使用 MOV 指令），而 x2APIC 基于 MSR 访问 local APIC 寄存器（使用 RDMSR 与 WRMSR 指令）。
+local APIC 存在两种访问模式：XAPIC 和 x2APIC 模式。
+* XAPIC 模式基于 memory mapped（内存映射）方式访问 local APIC 寄存器（使用 MOV 指令），
+* x2APIC 基于 MSR 访问 local APIC 寄存器（使用 RDMSR 与 WRMSR 指令）。
 
 VMX 提供了这两种途径访问的虚拟化功能，分别在“virtualize APIC accesses”位与“virtualize x2 APIC mode”位里设置。但是，不能同时使用这两种途径的虚拟化（参见 4.4.1.3 节）。
 
-Local APIC 虚拟化设置主要基于 secondary processor- based VM- execution control 字段，而 primary processor- based VM- execution control 字段则提供了对“use TPR shadow 位的设置。
+Local APIC **虚拟化设置主要**基于 `secondary processor-based VM-execution control` 字段，而 `primary processor-based VM-execution control` 字段则提供了对“use TPR shadow 位的设置。
