--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/2. local APIC虚拟化机制.md
@@ -2,9 +2,9 @@
 
 前面一节介绍的local APIC虚拟化原理是使用EPT映射机制或MSR bitmap机制来监控guest访问local APIC页面, 并模拟写入和读取local APIC寄存器.
 
-VMX引进了**原生的local APIC虚拟化机制**, 由VMCS的`secondary processor-based VM-execution control`字段提供下面的功能.
+VMX引进了**原生的local APIC虚拟化机制**, 由VMCS的`secondary processor-based VM-execution control`字段提供**下面的功能**.
 
-* **Virtualize APIC accesses**(虚拟化APIC访问). 当"**virtualize APIC accesses**"位(bit 0)为1时, 将启用`APIC-access page`页面. 处理器虚拟化**guest线性访问APIC-access page页面**的行为, 取决于"APIC-register virtualization"位的设置, 产生两种结果:
+* **Virtualize APIC accesses**(虚拟化APIC访问, bit 0). 当为1时, 将**启用APIC-access page页面**. 处理器虚拟化**guest线性访问APIC-access page页面**的行为, 取决于"APIC-register virtualization"位的设置, 产生两种结果:
     - 产生**APIC access VM-exit**, 或者**APIC write VM-exit**(见7.2.8).
     - 成功访问virtual-APIC page页面的数据, 或者虚拟化某项操作(比如EOI虚拟化).
 * **Virtualize x2 APIC mode**（虚拟化 x2APIC 模式）。当“virtualize x2 APIC mode”位（bit4) 为 1 时，处理器虚拟化通过 **MSR** 来访问 `800H ~ 8FFH` local APIC 寄存器的行为，取决于“APIC-register virtualization”位的设置，产生两种结果：
