--- Auto-Git Commit ---

--- a/Vim/0. Tips.md
+++ b/Vim/0. Tips.md
@@ -287,12 +287,14 @@ language messages zh_CN.utf-8
 # 8. 大小写转换
 
 1. 单个字符的处理
-~：切换光标所在位置的字符的大小写形式，大写转换为小写，小写转换为大写
-3~：将光标位置开始的3个字母改变其大小写
+* `~`：切换光标所在位置的字符的大小写形式，大写转换为小写，小写转换为大写
+* `3~`：将光标位置开始的3个字母改变其大小写
+
 2. 文本整体的处理
-gu：切换为小写，gU：切换为大写，剩下的就是对这两个命令的限定（限定行字母和单词）等等。
+* `gu`：切换为小写，`gU`：切换为大写，剩下的就是对这两个命令的限定（限定行字母和单词）等等。
 
 2.1 整篇文章
+
 无须进入命令行模式，键入：
 
 ggguG：整篇文章转换为小写，gg：文件头，G：文件尾，gu：切换为小写
@@ -309,3 +311,5 @@ gUG ：从光标所在位置到文章最后一个字符，都变为大写
 gU1G ：从光标所在位置到文章第一个字符，都变为大写
 
 https://blog.csdn.net/lanchunhui/article/details/51542211
+
+https://blog.csdn.net/yangzhongxuan/article/details/8484167
