--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -37,6 +37,13 @@
 
 
 
+echo nop > /sys/kernel/debug/tracing/current_tracer
+echo > /sys/kernel/debug/tracing/trace
+echo function_graph > /sys/kernel/debug/tracing/current_tracer
+echo ':mod:kvm' > set_ftrace_filter
+echo ':mod:kvm_amd' >> set_ftrace_filter
+echo ':mod:kvm_intel' >> set_ftrace_filter
+
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
