--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -35,14 +35,18 @@
 3. timer到期会产生中断, 发生vm-exit, 进入KVM中
 4. KVM中调用timer处理函数
 
+追踪:
 
-
+```
 echo nop > /sys/kernel/debug/tracing/current_tracer
 echo > /sys/kernel/debug/tracing/trace
-echo function_graph > /sys/kernel/debug/tracing/current_tracer
 echo ':mod:kvm' > set_ftrace_filter
 echo ':mod:kvm_amd' >> set_ftrace_filter
 echo ':mod:kvm_intel' >> set_ftrace_filter
+echo 1 > /sys/kernel/debug/tracing/tracing_on
+echo function_graph > /sys/kernel/debug/tracing/current_tracer
+```
+
 
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
