--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -47,6 +47,7 @@ echo 1 > /sys/kernel/debug/tracing/tracing_on
 echo function_graph > /sys/kernel/debug/tracing/current_tracer
 ```
 
+使用 kvm-unit-test 的vmexit中的`tscdeadline`和`tscdeadline_immed`
 
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
