--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -4,6 +4,8 @@
 <!-- code_chunk_output -->
 
 - [1. APIC timer中断](#1-apic-timer中断)
+  - [1.1. APIC timer简介](#11-apic-timer简介)
+  - [1.2. trace方法](#12-trace方法)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
 - [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
@@ -24,6 +26,8 @@
 
 # 1. APIC timer中断
 
+## 1.1. APIC timer简介
+
 前面提到, APIC Timer的APIC定时器有3种定时器模式: 周期触发periodic和一次性触发one-shot和TSC-Deadline模式. 
 
 ![2020-05-26-09-28-21.png](./images/2020-05-26-09-28-21.png)
@@ -31,11 +35,13 @@
 从图中可以看到, timer中断大概分为下面几步
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
-2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer, 其次使用hrtimer)作为中断源, 最后进入Guest模式
+2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer`<preemption timer>`, 其次使用hrtimer)作为中断源, 最后进入Guest模式
 3. timer到期会产生中断, 发生vm-exit, 进入KVM中
+        - preemption timer中断
+        - hrtimer到期会产生外部中断, 导致虚拟机vm-exit
 4. KVM中调用timer处理函数
 
-追踪:
+## 1.2. trace方法
 
 ```
 echo nop > /sys/kernel/debug/tracing/current_tracer
@@ -48,7 +54,7 @@ echo 1 > /sys/kernel/debug/tracing/tracing_on
 echo function_graph > /sys/kernel/debug/tracing/current_tracer
 ```
 
-使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 或者自己编写`kvm-unit-test`测试
+使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
