--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -39,7 +39,8 @@
 3. timer到期会产生中断, 发生vm-exit, 进入KVM中
         - preemption timer中断
         - hrtimer到期会产生外部中断, 导致虚拟机vm-exit
-4. KVM中调用timer处理函数
+4. KVM中调用timer处理函数, 注入中断
+5. 
 
 ## 1.2. trace方法
 
