--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -5,7 +5,7 @@
 
 - [1. APIC timer中断](#1-apic-timer中断)
   - [1.1. APIC timer简介](#11-apic-timer简介)
-  - [1.2. trace方法](#12-trace方法)
+  - [1.2. trace代码](#12-trace代码)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
 - [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
@@ -37,12 +37,13 @@
 1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
 2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer`<preemption timer>`, 其次使用hrtimer)作为中断源, 最后进入Guest模式
 3. timer到期会产生中断, 发生vm-exit, 进入KVM中
-        - preemption timer中断
+        - preemption timer导致的vm-exit
         - hrtimer到期会产生外部中断, 导致虚拟机vm-exit
-4. KVM中调用timer处理函数, 注入中断
-5. 
+4. KVM中调用timer处理函数, 注入中断, 进入guest模式
+5. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
+6. KVM中模拟EOI行为后, 进入Guest模式
 
-## 1.2. trace方法
+## 1.2. trace代码
 
 ```
 echo nop > /sys/kernel/debug/tracing/current_tracer
